# stock-markets-analytics-zoomcamp

homeworks/2025/01-intro/: homework.ipynb  pyproject.toml
homeworks/2025/02-dataframe-analysis/: homework.ipynb  pyproject.toml
homeworks/2025/03-modeling/: homework.ipynb  pyproject.toml
